--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -1,18 +1,58 @@
+body{
+    background-color: white;
+
+}
+.image-container {
+    position:relative;
+    display: inline-block;
+
+  }
+  
+  .image-container img {
+    width: 50%;
+    height: auto;
+    
+    filter: grayscale(100%);
+    transition: filter 0.5s ease;
+  }
+  
+  .image-container:hover img {
+    filter: grayscale(0%);
+  }
+  .animate {
+    animation-name: example;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+  }
+  
+  @keyframes example {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.2);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
 
 .Heading{
     src: url(../Fonts/Carter_One/CarterOne-Regular.ttf);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 50px;
+    font-size: 100px;
     letter-spacing: 10px;
     text-indent: 10px;
     text-align: center;
     margin-top: 100px;
+    color: black;
     
 }
 h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-indent: 10px;
-    font-size: 100px;
+    font-size: 200px;
     text-align: center;
     
 }
@@ -22,11 +62,17 @@ h1{
     transition: all 0.3s ease-in-out;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 font-size: 100px;
-text-align: center;
+margin-left: 40%;
+margin-right: 40%;
 
 }
 
 .box:hover {
     transform: scale(1.2);
-    color: red ;
+    color: #f131ff;   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+
+
+  
