style guide and more blogs
done style guide. added more blogs. done artwork

--- a/CSS/blogs.css
+++ b/CSS/blogs.css
@@ -24,7 +24,7 @@ width: 100%;
 border-style: double;
 }
 .next{
-  background-color: #DC3220;
+  background-color: #593bf4;
   color: white;
 text-decoration: none;
 font-size: 20px;
@@ -36,7 +36,7 @@ border-radius: 20px;
 
 }
 .Prev{
-  background-color: #DC3220;
+  background-color: #eec01a;
   color: white;
 text-decoration: none;
 font-size: 20px;
