--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -50,6 +50,7 @@ body{
     
 }
 h1{
+  
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     text-indent: 10px;
     font-size: 200px;
@@ -57,6 +58,14 @@ h1{
     
 }
 .box {
+  @font-face {
+    font-family: "whoa_sauce_personal_usebold";
+    src: url(../Fonts/whoasaucepersonalusebold-mlmv5-webfont.woff2) format('woff2'),
+         url(../Fonts/whoasaucepersonalusebold-mlmv5-webfont.woff) format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
     color: rgb(17, 16, 16);
     text-align: center;
     transition: all 0.3s ease-in-out;
